# dap-sdk

./: .CMakeLists.txt.swp  .cursorrules  .gitignore  .gitlab-ci.yml  .gitmodules  CHIPMUNK_OPTIMIZATION_PROGRESS.md  CMAKE_CTEST_SUCCESS_REPORT.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COMPREHENSIVE_TEST_ANALYSIS_REPORT.md  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CRYPTO_API_ANALYSIS_REPORT.md  FINAL_API_SUMMARY.md  FINAL_TESTING_REPORT.md  Makefile  NEON_OPTIMIZATION_RESULTS.md  OPTIMIZATION_PHASE2_RESULTS.md  PROJECT_COMPLETION_SUMMARY.md  PYTHON_DAP_TEST_ANALYSIS.md  README.md  SIGNATURE_SYSTEM_OVERVIEW.md  SINGLE_CONSTRUCTOR_GUIDE.md  SLC_v2.2.0_FINAL_SUMMARY.txt  SLC_v2.2.0_self_improvement_patch.diff  STREAM_CH_BINDINGS_PLAN.md  TAPE_FORMAT_DESIGN.md  TESTING_GUIDE.md  UNIFIED_API_OVERVIEW.md  cmake_install.cmake  component_profiling_methodology.md  dap-sdk.pc.in  dap_sdk.c  dap_sdk.h  day2_critical_discovery.json  day2_final_report.json  day3_afternoon_memory_analysis.json  day3_evening_component_profiling.json  (+39 more)
benchmarks/: .gitignore  CMakeLists.txt  benchmark_competitive_full.c  benchmark_competitive_full.cpp  benchmark_stage1_multi_arch.c
benchmarks/datasets/: README.md
benchmarks/docs/: phase2_gaps.md
benchmarks/scripts/: download_competitors.sh
core/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  cmake_install.cmake  libdap.pri
core/docs/: dap__common_8h_source.html
core/include/: dap_arena.h  dap_binary_tree.h  dap_cert_compat.h  dap_cluster.h  dap_common.h  dap_config.h  dap_config2.h  dap_crc64.h  dap_file_utils.h  dap_json_rpc_errors.h  dap_list.h  dap_math_convert.h  dap_math_ops.h  dap_module.h  dap_resource_manager.h  dap_ring_buffer.h  dap_security_monitor.h  dap_serialize.h  dap_strfuncs.h  dap_sys_paths.h  dap_time.h  dap_tsd.h
core/src/: dap_arena.c  dap_binary_tree.c  dap_cbuf.c  dap_cluster.c  dap_common.c  dap_config.c  dap_config2.c  dap_crc64.c  dap_file_utils.c  dap_fnmatch.c  dap_json_rpc_errors.c  dap_list.c  dap_math_convert.c  dap_module.c  dap_resource_manager.c  dap_ring_buffer.c  dap_security_monitor.c  dap_serialize.c  dap_strfuncs.c  dap_string.c  dap_sys_paths.c  dap_time.c  dap_tsd.c
core/test/: CMakeLists.txt  dap_circular_test.c  dap_common_test.c  dap_common_test.h  dap_file_utils_test.c  dap_file_utils_test.h  dap_log_test.c  dap_log_test.h  dap_strfuncs_test.c  main.c  main_temp.c
crypto/: CMakeLists.txt  libdap-crypto.pri
crypto/XKCP/: CMakeLists.txt  CMakeLists.txt.backup2  Makefile  Makefile.build  libdap-custom.build  libdap-xkcp-armv7.build  libdap-xkcp-armv8.build  libdap-xkcp-plainc.build  libdap-xkcp-reference.build  libdap-xkcp-x8664.build
crypto/include/: dap_cert.h  dap_cert_file.h  dap_enc.h  dap_enc_base58.h  dap_enc_base64.h  dap_enc_bliss.h  dap_enc_chipmunk.h  dap_enc_dilithium.h  dap_enc_ecdsa.h  dap_enc_falcon.h  dap_enc_key.h  dap_enc_kyber.h  dap_enc_msrln.h  dap_enc_multisign.h  dap_enc_multisign_prepared.h  dap_enc_newhope.h  dap_enc_picnic.h  dap_enc_salsa2012.h  dap_enc_shipovnik.h  dap_enc_sphincsplus.h  dap_enc_tesla.h  dap_guuid.h  dap_hash.h  dap_hash_fusion.h  dap_hash_keccak.h  dap_pkey.h  dap_sign.h  dap_uuid.h
crypto/src/: .dap_enc_ecdsa.c.swp  .dap_enc_key.c.swp  .dap_sign.c.swp  dap_cert.c  dap_cert_file.c  dap_cipher.c  dap_enc.c  dap_enc_GOST.c  dap_enc_SEED.c  dap_enc_base58.c  dap_enc_base64.c  dap_enc_bf.c  dap_enc_bliss.c  dap_enc_chipmunk.c  dap_enc_dilithium.c  dap_enc_ecdsa.c  dap_enc_falcon.c  dap_enc_iaes.c  dap_enc_kdf.c  dap_enc_key.c  dap_enc_kyber.c  dap_enc_msrln.c  dap_enc_multisign.c  dap_enc_multisign_prepared.c  dap_enc_newhope.c  dap_enc_picnic.c  dap_enc_ringct20.c  dap_enc_salsa2012.c  dap_enc_shipovnik.c  dap_enc_sphincsplus.c  dap_enc_tesla.c  dap_hash.c  dap_hash_fusion.c  dap_hash_keccak.c  dap_pkey.c  dap_sign.c  dap_uuid.c
crypto/test/: CMakeLists.txt
crypto/tls/: CMakeLists.txt
docs/mcp_server/: README.md  __init__.py  mcp_server_ctl  pyproject.toml  run_server.py  run_server_daemon.py
examples/: CMakeLists.txt  cli_server_extended.c  rng_example.c
global-db/: CMakeLists.txt  dap_global_db.c  dap_global_db_ch.c  dap_global_db_cluster.c  dap_global_db_driver.c  dap_global_db_driver_cdb.c  dap_global_db_driver_mdbx.c  dap_global_db_driver_pgsql.c  dap_global_db_driver_sqlite.c  dap_global_db_legacy.c  dap_global_db_pkt.c  dap_global_db_remote.c  dap_global_db_sync.c
global-db/include/: dap_global_db.h  dap_global_db_ch.h  dap_global_db_cluster.h  dap_global_db_driver.h  dap_global_db_driver_cdb.h  dap_global_db_driver_mdbx.h  dap_global_db_driver_pgsql.h  dap_global_db_driver_sqlite.h  dap_global_db_legacy.h  dap_global_db_pkt.h  dap_global_db_remote.h  dap_global_db_sync.h
global-db/test/: CMakeLists.txt  dap_global_db_test.c
io/: CMakeLists.txt  dap_context.c  dap_context_queue.c  dap_events.c  dap_events_socket.c  dap_io_flow.c  dap_io_flow_cbpf.c  dap_io_flow_ctrl.c  dap_io_flow_datagram.c  dap_io_flow_ebpf.c  dap_io_flow_socket.c  dap_io_flow_udp.c  dap_net.c  dap_proc_queue.c  dap_proc_thread.c  dap_ring_buffer.c  dap_server.c  dap_server_helpers.c  dap_thread.c  dap_thread_pool.c  dap_timerfd.c  dap_worker.c  dap_worker_queue.c
io/bsd/: dap_io_flow_bsd_lb.c
io/darwin/: dap_io_flow_darwin_gcd.c
io/include/: dap_context.h  dap_context_queue.h  dap_events.h  dap_events_socket.h  dap_io_flow.h  dap_io_flow_ctrl.h  dap_io_flow_datagram.h  dap_io_flow_ebpf.h  dap_io_flow_socket.h  dap_io_flow_udp.h  dap_net.h  dap_proc_queue.h  dap_proc_thread.h  (+8 more)
plugin/: CMakeLists.txt
test-framework/: ASYNC_TESTING.md  CMakeLists.txt  DAP_TEST_FRAMEWORK_GUIDE_EN.md  README.md  dap_mock.c  dap_mock.h  dap_mock_linker_wrapper.h  dap_test.c  dap_test.h  dap_test_async.c  dap_test_async.h  dap_test_generator.c
tests/: CMakeLists.txt  README.md  TEST_TYPES.md  conftest.py  dap_config_helper.py  debug_test_init.c  pytest.ini  run.sh  test-framework-run.sh  test_dap_core.py  test_dap_detailed.py  test_dap_final.py  test_dap_fixes.py  test_dap_integration.py  test_init_helper.py  test_results_20250718_221011.txt
(+2907 files in other folders)
