[build-system]
requires = ["setuptools>=45", "wheel", "cmake>=3.10"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dap"
version = "3.0.0"
description = "DAP SDK Python Bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Demlabs", email = "support@demlabs.net"}
]
maintainers = [
    {name = "Demlabs", email = "support@demlabs.net"}
]
keywords = ["dap", "sdk", "crypto", "blockchain"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "pytest-xdist>=2.0.0",
]
dev = [
    "black>=21.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "pylint>=2.0.0",
]

[project.urls]
Documentation = "https://docs.demlabs.net/python-dap/"
Source = "https://gitlab.demlabs.net/dap/python-dap"
Tracker = "https://gitlab.demlabs.net/dap/python-dap/issues"

[tool.setuptools]
packages = ["dap", "dap.crypto"]
package-data = {dap = ["*.pyi", "py.typed"], "dap.crypto" = ["*.pyi"]}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=dap --cov-report=term-missing"
testpaths = [
    "tests/unit",
    "tests/integration",
]

[tool.coverage.run]
source = ["dap"]
omit = [
    "tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 